<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="300dp"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        style="@style/Toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:navigationIcon="@drawable/abc_vector_test"
        app:title="Авторизация">



    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="text" />

    <EditText
        android:id="@+id/passwordReg"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/passowrd"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="1"
        android:text="@string/loging" />

    <Button
        android:id="@+id/setProduct"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="1"
        android:text="@string/registrat" />

</LinearLayout>